data/forge_javadoc/1.12.2/processed/net_minecraft_client_Minecraft.md
# Minecraft

**Inheritance:** java.lang.Object → net.minecraft.client.Minecraft

## Class signature

```java
public class Minecraft extends java.lang.Object implements IThreadListener, ISnooperInfo
```

## Constructors

- `Minecraft(GameConfiguration gameConfig)`

## Methods

- `CrashReport addGraphicsAndWorldToCrashReport(CrashReport theCrash)`
- `<V><any> addScheduledTask(java.util.concurrent.Callable<V> callableToSchedule)`
- `<any> addScheduledTask(java.lang.Runnable runnableToSchedule)`
- `void addServerStatsToSnooper(Snooper playerSnooper)`
- `void addServerTypeToSnooper(Snooper playerSnooper)`
- `protected void checkWindowResize()`
- `void crashed(CrashReport crash)`
- `void dispatchKeypresses()`
- `void displayCrashReport(CrashReport crashReportIn)`
- `void displayGuiScreen(GuiScreen guiScreenIn)`
- `void displayInGameMenu()`
- `void draw(int posX, int posY, int texU, int texV, int width, int height, int red, int green, int blue, int alpha)`
- `void drawSplashScreen(TextureManager textureManagerInstance)`
- `void freeMemory()`
- `MusicTicker.MusicType getAmbientMusicType()`
- `BlockColors getBlockColors()`
- `BlockRendererDispatcher getBlockRendererDispatcher()`
- `NetHandlerPlayClient getConnection()`
- `ServerData getCurrentServerData()`
- `DataFixer getDataFixer()`
- `static int getDebugFPS()`
- `Framebuffer getFramebuffer()`
- `FrameTimer getFrameTimer()`
- `static int getGLMaximumTextureSize()`
- `IntegratedServer getIntegratedServer()`
- `ItemColors getItemColors()`
- `ItemRenderer getItemRenderer()`
- `LanguageManager getLanguageManager()`
- `int getLimitFramerate()`
- `static Minecraft getMinecraft()`
- `MusicTicker getMusicTicker()`
- `Snooper getPlayerUsageSnooper()`
- `PropertyMap getProfileProperties()`
- `java.net.Proxy getProxy()`
- `RenderItem getRenderItem()`
- `RenderManager getRenderManager()`
- `float getRenderPartialTicks()`
- `Entity getRenderViewEntity()`
- `IResourceManager getResourceManager()`
- `ResourcePackRepository getResourcePackRepository()`
- `ISaveFormat getSaveLoader()`
- `<T> ISearchTree<T> getSearchTree(SearchTreeManager.Key<T> key)`
- `SearchTreeManager getSearchTreeManager()`
- `Session getSession()`
- `MinecraftSessionService getSessionService()`
- `SkinManager getSkinManager()`
- `SoundHandler getSoundHandler()`
- `static long getSystemTime()`
- `TextureManager getTextureManager()`
- `TextureMap getTextureMapBlocks()`
- `float getTickLength()`
- `GuiToast getToastGui()`
- `Tutorial getTutorial()`
- `java.lang.String getVersion()`
- `java.lang.String getVersionType()`
- `static boolean isAmbientOcclusionEnabled()`
- `boolean isCallingFromMinecraftThread()`
- `boolean isConnectedToRealms()`
- `boolean isDemo()`
- `static boolean isFancyGraphicsEnabled()`
- `boolean isFramerateLimitBelowMax()`
- `boolean isFullScreen()`
- `boolean isGamePaused()`
- `static boolean isGuiEnabled()`
- `boolean isIntegratedServerRunning()`
- `boolean isJava64bit()`
- `boolean isReducedDebug()`
- `boolean isSingleplayer()`
- `boolean isSnooperEnabled()`
- `boolean isUnicode()`
- `void launchIntegratedServer(java.lang.String folderName, java.lang.String worldName, WorldSettings worldSettingsIn)`
- `void loadWorld(WorldClient worldClientIn)`
- `void loadWorld(WorldClient worldClientIn, java.lang.String loadingMessage)`
- `void populateSearchTreeManager()`
- `@Deprecated void refreshResources()`
- `void resize(int width, int height)`
- `void run()`
- `void runTick()`
- `@Deprecated <any> scheduleResourcesRefresh()`
- `void setConnectedToRealms(boolean isConnected)`
- `void setDimensionAndSpawnPlayer(int dimension)`
- `void setIngameFocus()`
- `void setIngameNotInFocus()`
- `void setRenderViewEntity(Entity viewingEntity)`
- `void setServerData(ServerData serverDataIn)`
- `void shutdown()`
- `void shutdownMinecraftApplet()`
- `static void stopIntegratedServer()`
- `ItemStack storeTEInStack(ItemStack stack, TileEntity te)`
- `void toggleFullscreen()`
- `void updateDisplay()`

## Fields

- `CreativeSettings creativeSettings`
- `GuiScreen currentScreen`
- `java.lang.String debug`
- `DebugRenderer debugRenderer`
- `int displayHeight`
- `int displayWidth`
- `ParticleManager effectRenderer`
- `EntityRenderer entityRenderer`
- `FontRenderer fontRenderer`
- `FrameTimer frameTimer`
- `GameSettings gameSettings`
- `GuiIngame ingameGUI`
- `boolean inGameHasFocus`
- `static boolean IS_RUNNING_ON_MAC`
- `LoadingScreenRenderer loadingScreen`
- `java.io.File mcDataDir`
- `DefaultResourcePack mcDefaultResourcePack`
- `Profiler mcProfiler`
- `static byte[] memoryReserve`
- `MouseHelper mouseHelper`
- `RayTraceResult objectMouseOver`
- `EntityPlayerSP player`
- `PlayerControllerMP playerController`
- `Entity pointedEntity`
- `boolean renderChunksMany`
- `TextureManager renderEngine`
- `RenderGlobal renderGlobal`
- `boolean skipRenderWorld`
- `FontRenderer standardGalacticFontRenderer`
- `WorldClient world`